<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txtTabTitleContactCreator">Create Contact</string>
    <string name="ContactName">Contact Name</string>
    <string name="ContactPhone">Phone Number</string>
    <string name="ContactEmail">Email Address</string>
    <string name="ContactAddress">Home Address</string>
    <string name="btnAddContact">Add Contact</string>
    <string name="txtTabTitleContactView">My Contacts</string>

</resources>
