<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main"
    android:orientation="vertical"
    android:id="@+id/main">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabHost">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:id="@+id/tabCreate"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/txtTabTitleContactCreator"
                        android:id="@+id/lblContactCreator"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal" />

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="75dp"
                        android:id="@+id/imgContact"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/user"
                        android:layout_marginTop="10dp"
                        android:contentDescription="ContactImage"
                        android:adjustViewBounds="true" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtContactName"
                        android:layout_marginTop="15dp"
                        android:hint="@string/ContactName"
                        android:inputType="textCapWords" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtContactPhone"
                        android:layout_marginTop="15dp"
                        android:hint="@string/ContactPhone"
                        android:layout_gravity="center_horizontal"
                        android:inputType="phone" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtContactEmail"
                        android:layout_marginTop="15dp"
                        android:hint="@string/ContactEmail"
                        android:layout_gravity="center_horizontal"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtContactAddress"
                        android:layout_marginTop="15dp"
                        android:hint="@string/ContactAddress"
                        android:layout_gravity="center_horizontal"
                        android:inputType="textPostalAddress" />

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnAddContact"
                        android:id="@+id/btnContactSave"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:enabled="false" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tabContacts"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/txtTabTitleContactView"
                        android:id="@+id/lblContactViewer"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp" />

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/listViewContacts"
                        android:layout_gravity="center_horizontal"
                        android:headerDividersEnabled="true"
                        android:footerDividersEnabled="true" />
                </LinearLayout>

            </FrameLayout>

        </LinearLayout>
    </TabHost>

</LinearLayout>
